Add cid image attachment support in template
